<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitosans"
        android:gravity="center"
        android:text="@string/Developer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitosans"
        android:gravity="center"
        android:text="@string/MailSupport"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitosans"
        android:gravity="center"
        android:text="@string/Version"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="60dp"
            android:importantForAccessibility="no"
            android:src="@drawable/instagram" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/facebook" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/CloseInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_Button"
        android:text="@string/CloseInfo" />

</androidx.appcompat.widget.LinearLayoutCompat>