<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Contacts.Detail_Contact_Activity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <!--BACKGROUND CONTACT-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_contact" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Image_Contact_D"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Detail_ContactTXT"
                android:textSize="15sp"
                android:textStyle="bold" />





            <TextView
                android:id="@+id/Name_Contact_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Name_Contact_D"
                android:textSize="20sp" />



            <TextView
                android:id="@+id/Mail_Contact_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Mail_Contact_D"
                android:textSize="20sp" />




            <TextView
                android:id="@+id/Home_Contact_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Home_Contact_D"
                android:textSize="20sp" />


                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"

                android:layout_width="match_parent"
                android:layout_height="220dp"/>




            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/Phone_Contact_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunitosans"
                android:text="@string/Phone_Contact_D"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_phone" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <!--CALL CONTACT -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:src="@drawable/call_contact"
                        android:layout_height="45dp" />

                    <Button
                        android:id="@+id/Call_C"
                        android:backgroundTint="@color/color_Button"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:text="@string/Call_C"
                        android:layout_height="wrap_content" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--SEND MESSAGE TO CONTACT-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:src="@drawable/send_message"
                        android:layout_height="45dp" />

                    <Button
                        android:id="@+id/Message_C"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/color_Button"
                        android:layout_width="wrap_content"
                        android:text="@string/Message_C"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>